force-app/main/default/objects/Deployment_Job__c/fields/Finished_On__c.field-meta.xml
<CustomField>
    <fullName>Finished_On__c</fullName>
    <label>Finished On</label>
    <type>DateTime</type>
</CustomField>