force-app/main/default/objects/Deployment_Job__c/fields/Tests_Failed__c.field-meta.xml
<CustomField>
    <fullName>Tests_Failed__c</fullName>
    <label>Tests Failed</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>