force-app/main/default/objects/Deployment_Job__c/fields/Tests_Passed__c.field-meta.xml
<CustomField>
    <fullName>Tests_Passed__c</fullName>
    <label>Tests Passed</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>